# XuperMouse

./: CMakePresets.json  README.md
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/blink/: CMakeLists.txt  board.h  main.cc
app/blink/bsp_f411/: CMakeLists.txt  f411_board.cc  hal_timebase.c
app/i2c_test/: CMakeLists.txt  board.h  main.cc
app/i2c_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/imu_test/: CMakeLists.txt  board.h  main.cc
app/imu_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/pwm_test/: CMakeLists.txt  board.h  main.cc
app/pwm_test/bsp_f411/: CMakeLists.txt  f411_board.cc
app/spi_test/: CMakeLists.txt  board.h  main.cc
app/spi_test/bsp_f411/: CMakeLists.txt  spi_app_bsp.cc
app/w25q_test/: CMakeLists.txt  main.cc
common/core/: CMakeLists.txt
common/core/math/: imu_math.h
common/core/periph/: CMakeLists.txt
common/core/periph/bno055/: CMakeLists.txt  bno055_imu.cc  bno055_imu.h
common/core/periph/chip_select/: CMakeLists.txt  gpio_cs.cc  gpio_cs.h
common/core/periph/w25q128/: CMakeLists.txt  w25q.cc  w25q.h
common/core/utils/: reg_helpers.cc
common/drivers/: CMakeLists.txt
common/drivers/bus/: i2c.h  spi.h
common/drivers/io/: gpio.h  pwm.h
common/drivers/platform/stm32f4/: CMakeLists.txt  st_gpio.cc  st_gpio.h  st_i2c.cc  st_i2c.h  st_pwm.cc  st_pwm.h  st_spi.cc  st_spi.h
common/drivers/time/: CMakeLists.txt  delay.cc  delay.h
mcu_support/stm32/f4xx/HAL/: CMakeLists.txt  stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_pwr_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_tim.h
(+27 files in other folders)
